fixes navbar logo not showing on IE

--- a/doc/_static/css/local.css
+++ b/doc/_static/css/local.css
@@ -5,3 +5,7 @@
    margin: 1em;
    max-width: 700px;
 }
+
+.navbar-brand img {
+   width: 216px;
+}
